--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
       <input data-ng-model="ghc.username" placeholder="enter a github username"></input>
       <button data-ng-click="ghc.fetchEvents(ghc.username)">click for your last github event</button>
     </form>
+    <h1 data-ng-if="ghc.error">{{ghc.error}}</h1>
     <article data-ng-if="ghc.stuff">
       <img src="{{ghc.stuff.imgUrl}}" alt="user gravatar image">
       <section>
