--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,11 @@
       <img src="{{ghc.stuff.imgUrl}}" alt="user gravatar image">
       <section>
         <h2 data-ng-if="ghc.stuff">
-          {{ghc.stuff.username}}&#39;s last Github event was on {{ghc.stuff.date}} at {{ghc.stuff.time}}.
+          {{ghc.stuff.username}}&#39;s last Github event was on {{ghc.stuff.date | date: 'fullDate'}} at {{ghc.stuff.date | date: 'mediumTime'}}.
         </h2>
         <p> This badass code ninja was working on the <em> {{ghc.stuff.repo}} </em> repo</p>
         <p> This was a <em>{{ghc.stuff.type}}</em></p>
+        <p data-ng-if="ghc.stuff.commitMessage">The commit message was: <em>{{ghc.stuff.commitMessage}}</em></p>
       </section>
     </article>
   </main>
